# jacobian-hessian-cpp

./: .gitignore  CMakeLists.txt  Doxyfile  Readme.ipynb  jacobian-hessian-cpp.kdev4  numerical-jacobian-hessian-cpp.kdev4
src/: fx.cpp  fx.h  main1.cpp
vs2015/: demo.sln  demo1.vcxproj
